--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img id="img-profile1" src="https://scontent.fbkk5-4.fna.fbcdn.net/v/t39.30808-6/338132025_908146607129476_8867180952239952798_n.jpg?_nc_cat=110&cb=99be929b-59f725be&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHksfhjDu_ss27pzJj_idatEaZ7vs2hF48Rpnu-zaEXj8VbXeciVZt_aMWvPUC2__NtGRK7EAXniGFTiJsR4uwE&_nc_ohc=xorahsMInswAX-wCyla&_nc_ht=scontent.fbkk5-4.fna&oh=00_AfAo2n0WC-_AqLhysO5EfCy9x_lNlE1P65Rj7MZMG-Ga2A&oe=64AA98CB" width="200" alt="">
     </div>
     <h1 class="name">Hi i'm Khanakorn kositkhongchana</h1>
-    <h1 class="contact">Below is my contact</h1><hr>
+    <h1 class="contact">Below is my contact</h1>
     <div class="con-link">
 <a href="https://www.facebook.com/profile.php?id=100010370618977" target="_blank"><img id="icon-link-facebook" src="./assets/img/facebook.jpg" alt=""></a>
        <a href="https://www.instagram.com/kositkhongchana/" target="_blank"><img id="icon-link-ig" src="./assets/img/ig.png" alt=""></a>
@@ -20,7 +20,6 @@
         <a href="https://www.twitch.tv/na_korn"target="_blank"><img id="icon-link-twich" src="./assets/img/twich.png" alt=""></a>
         <a href="https://steamcommunity.com/profiles/76561198297831655/" target="_blank"><img id="icon-link-steam" src="./assets/img/unnamed.png" alt=""></a>
     </div>
-    <hr>
     <div class="con-skill">
     <div class="My-list-game">
     <h1>My list game</h1>
@@ -68,7 +67,7 @@
         <li>กำลังทำ...</li>
     </ul>
 </div>
-</div><hr>
+</div>
 <footer><h3>7/7/2023 กำลังสร้างไปเรื่อยๆโดย คณากร โกสิตคงชนะ</h3></footer>
 </body>
 </html>
