--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="con-link">
 <a href="https://www.facebook.com/profile.php?id=100010370618977" target="_blank"><img id="icon-link-facebook" src="./assets/img/facebook.jpg" alt=""></a>
        <a href="https://www.instagram.com/kositkhongchana/" target="_blank"><img id="icon-link-ig" src="./assets/img/ig.png" alt=""></a>
-        <a href="https://discord.gg/wT3KaJ2r" target="_blank"><img id="icon-link-discord" src="./assets/img/discord.png" alt=""></a>
+        <a href="https://discord.gg/atDzV4Cy" target="_blank"><img id="icon-link-discord" src="./assets/img/discord.png" alt=""></a>
         <a href="https://www.twitch.tv/na_korn"target="_blank"><img id="icon-link-twich" src="./assets/img/twich.png" alt=""></a>
         <a href="https://steamcommunity.com/profiles/76561198297831655/" target="_blank"><img id="icon-link-steam" src="./assets/img/unnamed.png" alt=""></a>
     </div>
